--- a/css/styles.css
+++ b/css/styles.css
@@ -10824,3 +10824,15 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
+
+/* Eigen styling */
+
+.alert-fixed {
+  position:fixed; 
+  bottom: 12px; 
+  right: 12px; 
+  width: 320px;
+  z-index:9999; 
+  border-radius: 8px
+}
