--- a/css/styles.css
+++ b/css/styles.css
@@ -3110,7 +3110,7 @@ textarea.form-control-lg {
 }
 
 .btn-outline-dark {
-  --bs-btn-color: #f9f9f9;
+  --bs-btn-color: #38b1AD;
   --bs-btn-border-color: #212529;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #212529;
